--- a/package.json
+++ b/package.json
@@ -4,10 +4,54 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@tsed/ajv": "^7.83.1",
+    "@tsed/cli-core": "^5.4.0",
+    "@tsed/common": "^7.83.1",
+    "@tsed/core": "^7.83.1",
+    "@tsed/di": "^7.83.1",
+    "@tsed/json-mapper": "^7.83.1",
+    "@tsed/logger": "^6.7.8",
+    "@tsed/platform-express": "^7.83.1",
+    "@tsed/schema": "^7.83.1",
+    "ajv": "^8.17.1",
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.3",
+    "esbuild-decorators": "^1.0.0",
+    "radash": "^12.1.0",
+    "reflect-metadata": "^0.2.2",
+    "tslib": "^2.3.0",
+    "typescript-functional-extensions": "^2.0.0"
+  },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@nx/esbuild": "^19.8.0",
+    "@nx/eslint": "19.8.0",
+    "@nx/eslint-plugin": "19.8.0",
+    "@nx/jest": "19.8.0",
     "@nx/js": "19.8.0",
+    "@nx/node": "19.8.0",
     "@nx/workspace": "19.8.0",
-    "nx": "19.8.0"
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
+    "@types/node": "~18.16.9",
+    "esbuild": "^0.19.2",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "5",
+    "eslint-plugin-prettier": "5",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "nx": "19.8.0",
+    "prettier": "3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.5.2",
+    "typescript-eslint": "^8.0.0",
+    "verdaccio": "^5.0.4"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
